[package]
name = "transactions"
version = "0.1.0"
edition = "2021"
default-run = "bin"

[[bin]]
name = "bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
thiserror = "1.0"
fnv = "1.0"
